--- a/client/src/components/pages/Products/Products.module.css
+++ b/client/src/components/pages/Products/Products.module.css
@@ -5,11 +5,15 @@
   margin-top: 20px;
 }
 
-.goods__title {
-
+.products__title {
+  font-size: 22px;
+  font-weight: 600;
+  text-transform: capitalize;
+  
 }
 
 .goods {
+  margin-top: 6px;
   display: flex;
   flex-wrap: wrap;
 }
