--- a/client/src/components/pages/Product/Product.module.css
+++ b/client/src/components/pages/Product/Product.module.css
@@ -1,11 +1,3 @@
-
-
-.product__inner {
-  width: 1200px;
-  margin: 0 auto;
-  margin-top: 20px;
-}
-
 .product__wrapper {
   background: #fff;
   box-shadow: 0 2px 11px 0 #e4e4e4;
@@ -14,7 +6,6 @@
 }
 
 .product__left {
-
 }
 
 .product__right {
@@ -23,21 +14,39 @@
   margin-left: 40px;
 }
 
-.product__configuration {
-  margin-top: 14px;
+.product__configs {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-.configuration__type {
+.product__config {
   display: flex;
+  flex-direction: column;
+  margin-bottom: 14px;
 }
 
-.configuration__type_item {
-  padding: 10px;
-  border: 1px solid rgb(224, 224, 224);
-  margin-right: 10px;
-  border-radius: 2px;
-  color: #1d1d1d;
+.config__name {
+  text-transform: capitalize;
   font-size: 14px;
+}
+
+.config__values {
+  display: flex;
+  margin-top: 4px;
+}
+
+.config__value {
+  min-width: 50px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(240, 240, 240);
+  cursor: pointer;
+  font-size: 13px;
+  color: #5a5a5a;
+  margin-right: 10px;
+  padding: 0 10px;
 }
 
 .card__colors {
@@ -47,7 +56,6 @@
 .card__color {
   width: 40px;
   height: 40px;
-  border-radius: 50%;
   margin-left: 8px;
   position: relative;
   border: 1px solid rgb(170, 170, 170);
@@ -71,7 +79,7 @@
   font-weight: 500;
 }
 
-.card__color:hover .card__color_name{
+.card__color:hover .card__color_name {
   opacity: 1;
 }
 
@@ -116,24 +124,22 @@
 
 .slider__nav_arrow span {
   -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none;   /* Chrome/Safari/Opera */
-  -khtml-user-select: none;    /* Konqueror */
-  -moz-user-select: none;      /* Firefox */
-  -ms-user-select: none;       /* Internet Explorer/Edge */
-  user-select: none;           /* Non-prefixed version, currently
+  -webkit-user-select: none; /* Chrome/Safari/Opera */
+  -khtml-user-select: none; /* Konqueror */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
                                   not supported by any browser */
 }
 
 .slider__nav_left {
-
 }
 
 .slider__nav_right {
-  
 }
 
 .slider__nav_right span {
-  margin-left: auto;          
+  margin-left: auto;
 }
 
 .slider__nav_arrow:hover span {
